--- a/src/App.css
+++ b/src/App.css
@@ -3,20 +3,24 @@
   box-sizing: border-box;
   background-color: #111;
   color: wheat;
-  
 }
-
 .header{
-  height: 20vh;
+  height: 13vh;
   display:flex;
+  justify-content: space-between;
   flex: 25% 75%;
   align-items:center;
   padding: 2% 7%;
   margin: 0;
 }
+.logo>h2{
+  margin: 0;
+  padding-top: 5vh;
+}
 .logo{
   display: flex;
   padding-right: 10%;
+  justify-content: center;
 }
 .logo > img{
   max-width: 100%;
@@ -24,8 +28,8 @@
   border-radius: 35px;
   padding: 5%;
 }
-.btn{
-
+.btn>button:hover{
+  background-color:antiquewhite;
 }
 .btn >button{
   height: 8vh;
@@ -48,11 +52,23 @@
   color: black;
   padding: 5%;
   border-radius: 7px;
+  width: 20vw;
   background-color:wheat;
 }
-
+.image{
+  display: flex;
+  justify-content: center;
+}
 .name{
   display: flex;
+  justify-content: center;
+}
+.name>h3{
+  padding-right: 2%;
+}
+.mail{
+  display: flex;
+  justify-content: center;
 }
 .footer{
   height: 15vh;
